--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
                     <a href="">CONTACT</a>
                 </div>
 
-                <button><img src="./search-line.png" alt=""></button>
+                <button id="sbtn"><img src="./search-line.png" alt=""></button>
 
 
             </div>
