--- a/index.htm
+++ b/index.htm
@@ -1,144 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:wght@900&family=Protest+Riot&family=Protest+Strike&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:wght@900&family=Protest+Riot&family=Protest+Strike&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="main">
-        <div class="page1">
-            <div class="navbar">
-                <img src="./nav.png" alt="">
-                <div class="centernav">
-                    <a href="">ABOUT</a>
-                    <a href="">SERVICES</a>
-                    <a href="">PORTFOLIO</a>
-                    <a href="">CONTACT</a>
-                </div>
+      <div class="page1">
+        <div class="navbar">
+          <img src="./nav.png" alt="" />
 
-                <button id="sbtn"><img src="./search-line.png" alt=""></button>
-
-
-            </div>
-            <img src="./img.png" alt="">
-
+          <div class="centernav">
+            <a href="">ABOUT</a>
+            <a href="">SERVICES</a>
+            <a href="">PORTFOLIO</a>
+            <a href="">CONTACT</a>
+          </div>
+          <button id="sbtn"><img src="./search-line.png" alt="" /></button>
         </div>
-        <div class="text">
-            <h3>Hello!</h3>
-            <h1>We have <br> Design <br> Experience</h1>
-            <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Doloribus nostrum necessitatibus odit
-                dolore sed corrupti<br> totam inventore aspernatur nulla accusamus?</h4>
+        <img src="./img.png" alt="" /img>
+      </div>
+      <div class="text">
+        <h3>Hello!</h3>
+        <h1>
+          We have <br />
+          Design <br />
+          Experience
+        </h1>
+        <h4>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br />
+          Doloribus nostrum necessitatibus odit dolore sed corrupti<br />
+          totam inventore aspernatur nulla accusamus?
+        </h4>
 
-            <div class="button">
-                <button id="btn1">Let's talk</button>
-                <button id="btn2">Portfolio<img src="./arrow-right-up-line.png"></button>
-
-            </div>
+        <div class="button">
+          <button id="btn1">Let's talk</button>
+          <button id="btn2">
+            Portfolio<img src="./arrow-right-up-line.png" />
+          </button>
         </div>
+      </div>
 
-
-        <div class="page2">
-            <img src="./stamp.png" alt="">
-            <div id="right">
-                <div id="box">
-                    <h4>01/</h4>
-                    <h1>website ui / ux <br>design</h1>
-                    <div class="circle"><img src="./arrow-right-up-line.png" alt=""></div>
-                </div>
-                <div id="box">
-                    <h4>02/</h4>
-                    <h1>mobile app ui / <br> ux design</h1>
-                    <div class="circle"><img src="./arrow-right-up-line.png" alt=""></div>
-                </div>
-                <div id="box">
-                    <h4>03/</h4>
-                    <h1>dashbord ui / <br> ux design</h1>
-                    <div class="circle">
-                        <img src="./arrow-right-up-line.png" alt="">
-                    </div>
-                </div>
+      <div class="page2">
+        <img src="./stamp.png" alt="" />
+        <div id="right">
+          <div id="box">
+            <h4>01/</h4>
+            <h1>website ui / ux <br />design</h1>
+            <div class="circle">
+              <img src="./arrow-right-up-line.png" alt="" />
             </div>
-            <div id="left">
-                <h4>Services!</h4>
-                <div id="service">
-                    <h1>Services | <br>Offer</h1>
-                </div>
-                <div id="service2">
-                    <h4>---Lorem ipsum dolor sit amet consectetur adipisicing elit <br>Rem, aspernatur nulla labore iure
-                        praesentium modi <br>Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
-                </div>
-
+          </div>
+          <div id="box">
+            <h4>02/</h4>
+            <h1>
+              mobile app ui / <br />
+              ux design
+            </h1>
+            <div class="circle">
+              <img src="./arrow-right-up-line.png" alt="" />
             </div>
+          </div>
+          <div id="box">
+            <h4>03/</h4>
+            <h1>
+              dashbord ui / <br />
+              ux design
+            </h1>
+            <div class="circle">
+              <img src="./arrow-right-up-line.png" alt="" />
+            </div>
+          </div>
         </div>
-        <div class="page3">
-            <img src="./stamp.png" alt="">
-
-            <h4>Project!</h4>
-            <h1>Latest <br>Projects</h1>
-
-            <div id="project1">
-                <img src="./html-template-17295.jpg" alt="">
-                <h1>Plantshop Landing <br>Page Design </h1>
-                <div class="pcircle1">
-                    <img src="./arrow-right-up-line.png" alt="">
-                </div>
-
-            </div>
-
-            <div id="project2">
-                <img src="./vps hosting.png" alt="">
-                <h1>VPS Hosting <br>Website Design </h1>
-                <div class="pcircle2">
-                    <img src="./arrow-right-up-line.png" alt="">
-                </div>
-
-            </div>
-
-            <div id="project3">
-                <img src="./portfolio.jpg" alt="">
-                <h1>Personal Portfolio <br>Website Design</h1>
-                <div class="pcircle3">
-                    <img src="./arrow-right-up-line.png" alt="">
-                </div>
-
-            </div>
-
+        <div id="left">
+          <h4>Services!</h4>
+          <div id="service">
+            <h1>Services | <br />Offer</h1>
+          </div>
+          <div id="service2">
+            <h4>
+              ---Lorem ipsum dolor sit amet consectetur adipisicing elit
+              <br />Rem, aspernatur nulla labore iure praesentium modi
+              <br />Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </h4>
+          </div>
         </div>
-        <div class="page4">
-            
-            <div id="page4left">
-                <h3>Contact !</h3>
-                <h1>Let's Discuss <br>Your Project</h1>
-                <img src="./arrow-right-line.png" alt="">
-            </div>
-            <div id="page4right">
-                <div id="p1">
-                    <img src="./mail-fill.png" alt="">
-                    <h4>Client.tanim@gmail.com</h4>
-                </div>
-                <div id="p2">
-                    <img src="./map-pin-fill.png" alt="">
-                    <h4>New Delhi,New Mart 4860</h4>
-                </div>
+      </div>
+      <div class="page3">
+        <img src="./stamp.png" alt="" />
 
-            </div>
+        <h4>Project!</h4>
+        <h1>Latest <br />Projects</h1>
+
+        <div id="project1">
+          <img src="./html-template-17295.jpg" alt="" />
+          <h1>Plantshop Landing <br />Page Design</h1>
+          <div class="pcircle1">
+            <img src="./arrow-right-up-line.png" alt="" />
+          </div>
         </div>
 
+        <div id="project2">
+          <img src="./vps hosting.png" alt="" />
+          <h1>VPS Hosting <br />Website Design</h1>
+          <div class="pcircle2">
+            <img src="./arrow-right-up-line.png" alt="" />
+          </div>
+        </div>
+
+        <div id="project3">
+          <img src="./portfolio.jpg" alt="" />
+          <h1>Personal Portfolio <br />Website Design</h1>
+          <div class="pcircle3">
+            <img src="./arrow-right-up-line.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="page4">
+        <div id="page4left">
+          <h3>Contact !</h3>
+          <h1>Let's Discuss <br />Your Project</h1>
+          <img src="./arrow-right-line.png" alt="" />
+        </div>
+        <div id="page4right">
+          <div id="p1">
+            <img src="./mail-fill.png" alt="" />
+            <h4>Client.tanim@gmail.com</h4>
+          </div>
+          <div id="p2">
+            <img src="./map-pin-fill.png" alt="" />
+            <h4>New Delhi,New Mart 4860</h4>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
-
+    <script src="java.js"></script>
+  </body>
 </html>
